Added universal domain to site

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="{{ $style.Permalink }}">
     
     <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="{{ "favicon.ico" | relURL }}">
 </head>
 <body>
     <!-- Navigation -->
